--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mysql",
+  "name": "sql-coonectivity",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,6 +11,7 @@
   "dependencies": {
     "ejs": "^2.5.7",
     "express": "^4.15.4",
-    "mssql": "^4.0.4"
+    "mssql": "^4.0.4",
+    "mysql": "^2.14.1"
   }
 }
